--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SoulKing Shop</string>
+
+    <!--Tabs-->
+    <string name="home">Дім</string>
+    <string name="search">Пошук</string>
+    <string name="liked">Уподобані</string>
+    <string name="more">Ще</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
