--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="search">Пошук</string>
     <string name="liked">Уподобані</string>
     <string name="more">Ще</string>
+
+    <string name="soulKing_text">Soul King</string>
+    <string name="shop_text">Shop</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
