--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="search">Пошук</string>
     <string name="liked">Уподобані</string>
     <string name="more">Ще</string>
+    <string name="add">Додати</string>
 
     <string name="soulKing_text">Soul King</string>
     <string name="shop_text">Shop</string>
@@ -17,6 +18,7 @@
 
     <string name="enter_button_text">Вхід</string>
     <string name="registry_button_text">Реєстрація</string>
+    <string name="exit_button_text">Вийти</string>
 
     <string-array name="more_item_titles">
         <item>Мої замовлення</item>
@@ -26,6 +28,14 @@
         <item>Режим менеджера</item>
         <item>Служба підтримки</item>
         <item>Інформація</item>
+    </string-array>
+
+    <string-array name="more_item_titles_manager_mode">
+        <item>Дійсні замовлення</item>
+        <item>Популярні товари</item>
+        <item>Відгуки</item>
+        <item>Керування знижками</item>
+        <item>Служба підтримки</item>
     </string-array>
 
     <string name="icon_description">Картинка категорії</string>
@@ -57,4 +67,14 @@
 
     <string name="feedback_text">Відгуки будуть згодом...</string>
     <string name="question_text">Запитання будуть згодом...</string>
+
+    <string name="add_text">Додати новий товар</string>
+
+    <string name="name_hint">Назва</string>
+    <string name="price_hint">Ціна</string>
+    <string name="required_helper_text">"Обов'язково*"</string>
+    <string name="add_photo_text">Додати фото</string>
+
+    <string name="add_characteristic_text">Додати характеристику</string>
+    <string name="publish_product_text">Опублікувати</string>
 </resources>
